--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
     <%= render 'shared/navbar' %>
     <%= render 'shared/banner' %>
     <%= yield %>
+    <%= render 'shared/footer' %>
+    <%= javascript_pack_tag 'hello_react' %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
   </body>
